[gd_scene load_steps=5 format=2]

[ext_resource path="res://Tilemap/Font/Magic.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Tilemap/Imagenes Menu/3.jpg" type="Texture" id=2]
[ext_resource path="res://Menues/Muerto.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 79
font_data = ExtResource( 1 )

[node name="Muerto" type="Node2D"]
script = ExtResource( 3 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 200, 156 )
scale = Vector2( 0.392578, 0.304688 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="ParallaxBackground"]
margin_left = 7.0
margin_top = 11.0
margin_right = 390.0
margin_bottom = 111.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "GAME   OVER"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 34.0
margin_top = 145.0
margin_right = 138.0
margin_bottom = 220.0

[node name="Menu" type="Button" parent="VBoxContainer"]
margin_right = 104.0
margin_bottom = 20.0
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
text = "MENU"

[node name="Reiniciar" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 104.0
margin_bottom = 44.0
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
text = "REINICIAR"

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 104.0
margin_bottom = 68.0
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
text = "EXIT"

[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Reiniciar" to="." method="_on_Reiniciar_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
